--- a/ARKFUTURE/CONF/anope/anope.conf
+++ b/ARKFUTURE/CONF/anope/anope.conf
@@ -728,7 +728,7 @@ log
  * 如果您配置了具有权限的其他命令，例如来自第三方模块的命令
  * 在使用命令之前，权限必须包含在opertype块中.
  *
- * Available privileges:
+ * 可用权限:
  *  botserv/administration        - Can view and assign private BotServ bots
  *  botserv/fantasy               - Can use fantasy commands without the FANTASY privilege
  *  chanserv/administration       - Can modify the settings of any channel (including changing of the owner!)
@@ -752,7 +752,7 @@ log
  *  operserv/oper/modify          - Can add and remove operators with at most the same privileges
  *  protected                     - Can not be kicked from channels by services
  *
- * Available commands:
+ * 可用命令:
  *   botserv/bot/del          botserv/bot/add               botserv/bot/change        botserv/set/private
  *   botserv/set/nobot
  *
@@ -796,34 +796,34 @@ log
 
 opertype
 {
-	/* The name of this opertype */
+	/* 此操作类型的名称 */
 	name = "Helper"
 
-	/* What commands (see above) this opertype has */
+	/* 命令 */
 	commands = "hostserv/*"
 }
 
 opertype
 {
-	/* The name of this opertype */
+	/* 此操作类型的名称 */
 	name = "Services Operator"
 
-	/* What opertype(s) this inherits from. Separate with a comma. */
+	/* 这继承了什么操作类型 */
 	inherits = "Helper, Another Helper"
 
-	/* What commands (see above) this opertype may use */
+	/* 命令 */
 	commands = "chanserv/list chanserv/suspend chanserv/topic memoserv/staff nickserv/list nickserv/suspend operserv/mode operserv/chankill operserv/akill operserv/session operserv/modinfo operserv/sqline operserv/oper operserv/kick operserv/ignore operserv/snline"
 
-	/* What privs (see above) this opertype has */
+	/* 这个操作器有什么特权 */
 	privs = "chanserv/auspex chanserv/no-register-limit memoserv/* nickserv/auspex nickserv/confirm"
 
 	/*
-	 * Modes to be set on users when they identify to accounts linked to this opertype.
+	 * 当用户识别与此操作类型链接的帐户时 在用户身上设置的模式
+	 * 请注意 某些IRCd 如InspIRCd 不允许直接设置+o 这将不起作用
+	 * 
+	 * 
 	 *
-	 * This can be used to automatically oper users who identify for services operator accounts, and is
-	 * useful for setting modes such as Plexus's user mode +N.
-	 *
-	 * Note that some IRCds, such as InspIRCd, do not allow directly setting +o, and this will not work.
+	 * 
 	 */
 	#modes = "+o"
 }
@@ -849,41 +849,41 @@ opertype
 }
 
 /*
- * After defining different types of operators in the above opertype section, we now define who is in these groups
- * through 'oper' blocks, similar to ircd access.
+ * 在上述 opertype 部分定义不同类型的运算符后, 我们现在通过以下方式定义谁属于这些组 'oper' 块
+ * 
  *
- * The default is to comment these out (so NOBODY will have access).
- * You probably want to add yourself and a few other people at minimum.
+ * 默认设置是注释掉这些内容 (so NOBODY will have access).
+ * 您可能至少想添加您自己和其他一些人.
  *
- * As with all permissions, make sure to only give trustworthy people access.
+ * 与所有权限一样  请确保仅授予可信赖的人访问权限.
  */
 
-#oper
+oper
 {
-	/* The nickname of this services oper */
-	#name = "nick1"
+	/* 此服务操作者的昵称 */
+	name = "arkfuture"
 
-	/* The opertype this person will have */
+	/* 此人将具有的操作类型 */
 	type = "Services Root"
 
-	/* If set, the user must be an oper on the IRCd to gain their
-	 * oper privileges.
+	/* 如果设置，用户必须是IRCD上的操作者才能获得其操作者权限
+	 * 
 	 */
 	require_oper = yes
 
-	/* An optional password. If defined, the user must login using "/OPERSERV LOGIN" first */
-	#password = "secret"
+	/* 可选密码。如果已定义，用户必须首先使用 "/OPERSERV LOGIN" 登录 */
+	password = "123456"
 
-	/* An optional SSL fingerprint. If defined, it's required to be able to use this opertype. */
+	/* 可选的SSL指纹 如果已定义 则需要能够使用此操作类型 */
 	#certfp = "ed3383b3f7d74e89433ddaa4a6e5b2d7"
 
-	/* An optional list of user@host masks. If defined the user must be connected from one of them */
-	#host = "*@*.anope.org ident@*"
+	/* 主机名 */
+	host = "*@*"
 
-	/* An optional vHost to set on users who identify for this oper block.
-	 * This will override HostServ vHosts, and may not be available on all IRCds
+	/* 为识别此操作块的用户设置的可选vhosts 
+	 * 这将覆盖HostServ vHosts 并且可能不适用于所有IRCd
 	 */
-	#vhost = "oper.mynet"
+	vhost = "ARKFUTURE"
 }
 
 #oper
@@ -901,147 +901,182 @@ opertype
 /*
  * [OPTIONAL] Mail Config
  *
- * This section contains settings related to the use of email from services.
- * If the usemail directive is set to yes, unless specified otherwise, all other
- * directives are required.
+ * 邮件配置
+ * 如果usemail指令设置为yes 
+ * 则其他配置是必须的
  *
- * NOTE: Users can find the IP of the machine services is running on by examining
- * mail headers. If you do not want your IP known, you should set up a mail relay
- * to strip the relevant headers.
+ * 注意: 如果您希望您的IP地址不为人所知, 您应该设置一个邮件中继来剥离相关的邮件头
+ * 
+ * 
  */
 mail
 {
 	/*
-	 * If set, this option enables the mail commands in Anope. You may choose
-	 * to disable it if you have no Sendmail-compatible mailer installed. Whilst
-	 * this directive (and entire block) is optional, it is required if
-	 * nickserv:registration is set to yes.
+	 * 如果设置 此选项将启用Anope中的邮件命令 如果您没有安装与Sendmail兼容的邮件程序
+	 * 可以选择禁用它。虽然此指令是可选的
+	 * 
+	 * 
 	 */
-	usemail = yes
+	usemail = no
 
 	/*
-	 * This is the command-line that will be used to call the mailer to send an
-	 * email. It must be called with all the parameters needed to make it
-	 * scan the mail input to find the mail recipient; consult your mailer
-	 * documentation.
+	 * 这是用于调用邮件程序发送邮件的命令行
+	 * 大多数sendmail应用程序 或其替代品 都需要-t选项使用
+	 * 
+	 * 
 	 *
-	 * Postfix users must use the compatible sendmail utility provided with
-	 * it. This one usually needs no parameters on the command-line. Most
-	 * sendmail applications (or replacements of it) require the -t option
-	 * to be used.
+	 * 
+	 * 
+	 * 
+	 * 
 	 *
-	 * If you are running on Windows you should use a Windows sendmail port
-	 * like https://www.glob.com.au/sendmail/ for sending emails.
+	 * 
+	 * 
 	 */
 	#sendmailpath = "/usr/sbin/sendmail -it"
 
 	/*
-	 * This is the email address from which all the emails are to be sent from.
-	 * It should really exist.
+	 * 这是发送所有电子邮件的电子邮件地址
+	 * 它应该存在
 	 */
 	sendfrom = "services@example.com"
 
 	/*
-	 * This controls the minimum amount of time a user must wait before sending
-	 * another email after they have sent one. It also controls the minimum time
-	 * a user must wait before they can receive another email.
+	 * 这控制了用户在发送之前必须等待的最短时间
+	 * 强烈建议使用它
+	 * 
 	 *
-	 * This feature prevents users from being mail bombed using services and
-	 * it is highly recommended that it be used.
+	 * 
+	 * 
 	 *
-	 * This directive is optional, but highly recommended.
+	 * 
 	 */
 	delay = 5m
 
 	/*
-	 * If set, Anope will not put quotes around the TO: fields
-	 * in emails.
+	 * 如果设置 Anope将不会在TO:字段电子邮件周围加引号。
+	 * 可选的 也是必须的
 	 *
-	 * This directive is optional, and as far as we know, it's only needed
-	 * if you are using ESMTP or QMail to send out emails.
+	 * 
+	 * 
 	 */
 	#dontquoteaddresses = yes
 
 	/*
-	 * The content type to use when sending emails.
+	 * 发送电子邮件时使用的内容类型
 	 *
-	 * This directive is optional, and is generally only needed if you want to
-	 * use HTML or non UTF-8 text in your services emails.
+	 * 
+	 * 
 	 */
 	#content_type = "text/plain; charset=UTF-8"
 
 	/*
-	 * The subject and message of emails sent to users when they register accounts.
+	 * 用户注册帐户时发送给他们的电子邮件的主题和信息
 	 *
-	 * Available tokens for this template are:
-	 *  %n - Gets replaced with the nickname
-	 *  %N - Gets replaced with the network name
-	 *  %c - Gets replaced with the confirmation code
+	 * 模板为:
+	 *  %n - 获取 nickname
+	 *  %N - 获取 network name
+	 *  %c - 获取 confirmation code
 	 */
-	registration_subject = "Nickname registration for %n"
-	registration_message = "Hi,
+	registration_subject = "Nickname registration for %n | 名称注册 %n"
+	registration_message = "Hi | 您好,
 
 				You have requested to register the nickname %n on %N.
 				Please type \" /msg NickServ CONFIRM %c \" to complete registration.
 
 				If you don't know why this mail was sent to you, please ignore it silently.
 
-				%N administrators."
+				%N administrators.
+
+				---
+
+				您已请求在 %n 上注册昵称 %n
+				请键入 " /msg NickServ CONFIRM %c \" 以完成注册
+
+				如果你不知道为什么这封邮件被发送给你 请默默地忽略它
+
+				%N 管理员"
 
 	/*
-	 * The subject and message of emails sent to users when they request a new password.
+	 * 当用户请求新密码时发送给他们的电子邮件的主题和消息
 	 *
-	 * Available tokens for this template are:
-	 *  %n - Gets replaced with the nickname
-	 *  %N - Gets replaced with the network name
-	 *  %c - Gets replaced with the confirmation code
+	 * 模板为:
+	 *  %n - 获取 nickname
+	 *  %N - 获取 network name
+	 *  %c - 获取 confirmation code
 	 */
-	reset_subject = "Reset password request for %n"
-	reset_message = "Hi,
+	reset_subject = "Reset password request for %n | 重置密码  %n"
+	reset_message = "Hi | 您好,
 
 			You have requested to have the password for %n reset.
 			To reset your password, type \" /msg NickServ CONFIRM %n %c \"
 
 			If you don't know why this mail was sent to you, please ignore it silently.
 
-			%N administrators."
+			%N administrators.
+
+			---
+			
+			您已请求重置 %n 的密码
+			要重置密码，请键入 " /msg NickServ CONFIRM %n %c \"
+
+			如果你不知道为什么这封邮件被发送给你，请默默地忽略它 
+
+			%N 管理员 "
 
 	/*
-	 * The subject and message of emails sent to users when they request a new email address.
+	 * 当用户请求新的电子邮件地址时，发送给他们的电子邮件的主题和消息。
 	 *
-	 * Available tokens for this template are:
-	 *  %e - Gets replaced with the old email address
-	 *  %E - Gets replaced with the new email address
-	 *  %n - Gets replaced with the nickname
-	 *  %N - Gets replaced with the network name
-	 *  %c - Gets replaced with the confirmation code
+	 * 模板为:
+	 *  %e - 获取 old email address
+	 *  %E - 获取 new email address
+	 *  %n - 获取 nickname
+	 *  %N - 获取 network name
+	 *  %c - 获取 confirmation code
 	 */
-	emailchange_subject = "Email confirmation"
-	emailchange_message = "Hi,
+	emailchange_subject = "Email confirmation | 电子邮件确认"
+	emailchange_message = "Hi | 您好,
 
 			You have requested to change your email address from %e to %E.
 			Please type \" /msg NickServ CONFIRM %c \" to confirm this change.
 
 			If you don't know why this mail was sent to you, please ignore it silently.
 
-			%N administrators."
+			%N administrators.
+			
+			---
+			
+			您已请求将您的电子邮件地址从 %e 更改为 %E
+			请键入 " /msg NickServ CONFIRM %c \" 以确认此更改
+
+			如果你不知道为什么这封邮件被发送给你，请默默地忽略它
+
+			%N管理员 "
 
 	/*
-	 * The subject and message of emails sent to users when they receive a new memo.
+	 * 当用户收到新备忘录时，发送给他们的电子邮件的主题和信息.
 	 *
 	 * Available tokens for this template are:
-	 *  %n - Gets replaced with the nickname
-	 *  %s - Gets replaced with the sender's nickname
-	 *  %d - Gets replaced with the memo number
-	 *  %t - Gets replaced with the memo text
-	 *  %N - Gets replaced with the network name
+	 *  %n - 获取 nickname
+	 *  %s - 获取 发送者的 nickname
+	 *  %d - 获取 memo number
+	 *  %t - 获取 memo text
+	 *  %N - 获取 network name
 	 */
-	memo_subject = "New memo"
-	memo_message = "Hi %n,
+	memo_subject = "New memo | 新的备忘录"
+	memo_message = "Hi %n | 您好 %n,
 
 			You've just received a new memo from %s. This is memo number %d.
 
 			Memo text:
+
+			%t
+			
+			---
+			
+			您刚刚收到来自 %s 的新备忘录。这是备忘录编号 %d
+
+			备忘录文本:
 
 			%t"
 }
@@ -1049,28 +1084,28 @@ mail
 /*
  * [REQUIRED] Database configuration.
  *
- * This section is used to configure databases used by Anope.
- * You should at least load one database method, otherwise any data you
- * have will not be stored!
+ * 本节用于配置Anope使用的数据库
+ * 您应该至少加载一个数据库方法 否则您拥有的任何数据都不会被存储
+ * 
  */
 
 /*
  * [DEPRECATED] db_old
- *
- * This is the old binary database format from late Anope 1.7.x, Anope 1.8.x, and
- * early Anope 1.9.x. This module only loads these databases, and will NOT save them.
- * You should only use this to upgrade old databases to a newer database format by loading
- * other database modules in addition to this one, which will be used when saving databases.
+ * 
+ * 旧数据库加载后升级
+ * 
+ * 
+ * 
  */
 #module
 {
 	name = "db_old"
 
 	/*
-	 * This is the encryption type used by the databases. This must be set correctly or
-	 * your passwords will not work. Valid options are: md5, oldmd5, sha1, and plain.
-	 * You must also be sure to load the correct encryption module below in the Encryption
-	 * Modules section so that your passwords work.
+	 * 这是数据库使用的加密类型
+	 * 您必须设置为: md5, oldmd5, sha1, and plain.
+	 * 
+	 * 
 	 */
 	#hash = "md5"
 }
@@ -1078,8 +1113,8 @@ mail
 /*
  * db_atheme
  *
- * This allows importing databases from Atheme. You should load another database module as
- * well as this as it can only read Atheme databases not write them.
+ * 这允许从Atheme导入数据库
+ * 您应该加载另一个数据库模块 因为它只能读取Atheme数据库 不能写入它们
  */
 #module
 {
@@ -1094,46 +1129,46 @@ mail
 /*
  * [RECOMMENDED] db_flatfile
  *
- * This is the default flatfile database format.
+ * 这是默认的平面文件数据库格式
  */
 module
 {
 	name = "db_flatfile"
 
 	/*
-	 * The database name db_flatfile should use
+	 * 名称为 db_flatfile 应该使用
 	 */
 	database = "anope.db"
 
 	/*
-	 * Sets the number of days backups of databases are kept. If you don't give it,
-	 * or if you set it to 0, Anope won't backup the databases.
+	 * 设置数据库备份的保留天数
+	 * 可选 但建议使用
 	 *
-	 * NOTE: Anope must run 24 hours a day for this feature to work.
+	 * 
 	 *
-	 * This directive is optional, but recommended.
+	 * 
 	 */
-	keepbackups = 3
+	keepbackups = 1
 
 	/*
-	 * Allows Anope to continue file write operations (i.e. database saving)
-	 * even if the original file cannot be backed up. Enabling this option may
-	 * allow Anope to continue operation under conditions where it might
-	 * otherwise fail, such as a nearly-full disk.
+	 * 允许Anope继续文件写入操作 (即数据库保存)
+	 * 可选 但不建议使用 如果清楚你在做什么
+	 * 
+	 * 
 	 *
-	 * NOTE: Enabling this option can cause irrecoverable data loss under some
-	 * conditions, so make CERTAIN you know what you're doing when you enable it!
+	 * 
+	 * 
 	 *
-	 * This directive is optional, and you are discouraged against enabling it.
+	 * 
 	 */
 	#nobackupokay = yes
 
 	/*
-	 * If enabled, services will fork a child process to save databases.
-	 *
-	 * This is only useful with very large databases, with hundreds
-	 * of thousands of objects, that have a noticeable delay from
-	 * writing databases.
+	 * 如果启用，服务将分叉子进程以保存数据库
+	 * 这只适用于非常大的数据库
+	 * 
+	 * 
+	 * 
 	 */
 	fork = no
 }
@@ -1141,15 +1176,15 @@ module
 /*
  * db_sql and db_sql_live
  *
- * db_sql module allows saving and loading databases using one of the SQL engines.
- * This module loads the databases once on startup, then incrementally updates
- * objects in the database as they are changed within Anope in real time. Changes
- * to the SQL tables not done by Anope will have no effect and will be overwritten.
+ * db_sql 模块允许使用其中一个sql引擎保存和加载数据库 逐步更新
+ * db_sql_live 模块允许使用其中一个sql引擎保存和加载数据库 及时更新
+ * 
+ * 
  *
- * db_sql_live module allows saving and loading databases using one of the SQL engines.
- * This module reads and writes to SQL in real time. Changes to the SQL tables
- * will be immediately reflected into Anope. This module should not be loaded
- * in conjunction with db_sql.
+ * 
+ * 
+ * 
+ * 
  *
  */
 #module
@@ -1158,47 +1193,47 @@ module
 	#name = "db_sql_live"
 
 	/*
-	 * The SQL service db_sql(_live) should use, these are configured in modules.conf.
-	 * For MySQL, this should probably be mysql/main.
+	 * 设置数据库类型(如mysql等) 这些在modules.conf中配置
+	 * 
 	 */
 	engine = "sqlite/main"
 
 	/*
-	 * An optional prefix to prepended to the name of each created table.
-	 * Do not use the same prefix for other programs.
+	 * 在每个创建的表的名称前添加一个可选前缀.
+	 * 
 	 */
 	#prefix = "anope_db_"
 
-	/* Whether or not to import data from another database module in to SQL on startup.
-	 * If you enable this, be sure that the database services is configured to use is
-	 * empty and that another database module to import from is loaded before db_sql.
-	 * After you enable this and do a database import you should disable it for
-	 * subsequent restarts.
+	/* 启动时是否将其他数据库模块中的数据导入
+	 * 
+	 * 
+	 * 
+	 * 
 	 *
-	 * Note that you can not import databases using db_sql_live. If you want to import
-	 * databases and use db_sql_live you should import them using db_sql, then shut down
-	 * and start services with db_sql_live.
+	 * 
+	 * 
+	 * 
 	 */
 	import = false
 }
 
 /*
- * db_redis.
+ * db_redis
  *
- * This module allows using Redis (https://redis.io/) as a database backend.
- * This module requires that redis is loaded and configured properly.
+ * 
+ * 
  *
- * Redis 2.8 supports keyspace notifications which allows Redis to push notifications
- * to Anope about outside modifications to the database. This module supports this and
- * will internally reflect any changes made to the database immediately once notified.
- * See docs/REDIS for more information regarding this.
+ * 
+ * 
+ * 
+ * 
  */
 #module
 {
 	name = "db_redis"
 
 	/*
-	 * Redis database to use. This must be configured with redis.
+	 * 使用Redis数据库 这必须使用redis进行配置
 	 */
 	engine = "redis/main"
 }
@@ -1206,21 +1241,21 @@ module
 /*
  * [RECOMMENDED] Encryption modules.
  *
- * The encryption modules are used when dealing with passwords. This determines
- * how the passwords are stored in the databases.
+ * 加密模块的使用
+ * 
  *
- * The first encryption module loaded is the primary encryption module. All new
- * passwords are encrypted by this module. Old passwords encrypted with another
- * encryption method are automatically re-encrypted with the primary encryption
- * module the next time the user identifies.
+ * 
+ * 
+ * 
+ * 
  */
 
 /*
  * enc_sha2
- *
- * Provides support for encrypting passwords using the HMAC-SHA-2 algorithm. See
- * https://en.wikipedia.org/wiki/SHA-2 and https://en.wikipedia.org/wiki/HMAC
- * for more information.
+ * 
+ * 
+ * 
+ * 
  */
 module
 {
@@ -1322,32 +1357,32 @@ module
 #module { name = "enc_sha1" }
 #module { name = "enc_sha256" }
 
-/* Extra (optional) modules. */
+/* 额外可选的模块 */
 include
 {
 	type = "file"
-	name = "modules.example.conf"
+	name = "modules.conf"
 }
 
 /*
- * Chanstats module.
- * Requires a MySQL Database.
+ * Chanstats 模块.
+ * 需要 MySQL 数据库.
  */
 #include
 {
 	type = "file"
-	name = "chanstats.example.conf"
+	name = "chanstats.conf"
 }
 
 /*
- * IRC2SQL Gateway
- * This module collects data about users, channels and servers. It doesn't build stats
- * itself, however, it gives you the database, it's up to you how you use it.
+ * IRC2SQL 网关
+ * 此模块收集有关用户、渠道和服务器的数据
+ * 它本身并不构建统计数据，但是，它为您提供了数据库，这取决于您如何使用它
  *
- * Requires a MySQL Database and MySQL version 5.5 or higher
+ * 需要MySQL数据库和MySQL 5.5或更高版本
  */
 #include
 {
 	type = "file"
-	name = "irc2sql.example.conf"
+	name = "irc2sql.conf"
 }
