--- a/ARKFUTURE/CONF/anope/chanserv.conf
+++ b/ARKFUTURE/CONF/anope/chanserv.conf
@@ -21,7 +21,7 @@ service
 	/*
 	 * The hostname of the ChanServ client.
 	 */
-	host = "services.host"
+	host = "ARKFUTURE"
 
 	/*
 	 * The realname of the ChanServ client.
