--- a/ARKFUTURE/CONF/anope/irc2sql.conf
+++ b/ARKFUTURE/CONF/anope/irc2sql.conf
@@ -18,7 +18,7 @@ service
 	/*
 	 * The hostname of the StatServ client.
 	 */
-	host = "stats.host"
+	host = "ARKFUTURE"
 
 	/*
 	 * The realname of the StatServ client.
