修复了inspircd.conf文件中的配置错误，添加了服务别名和排除过滤器的设置。

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -648,7 +648,44 @@
       recvpass="123456">
 <services server="127.0.0.1" 
           silent="yes">
-<bind address="127.0.0.1" 
+<bind address="" 
       port="7000" 
-      type="servers">
+      type="servers"
+      free="yes">
+<alias text="BOTSERV"  replace="SQUERY $requirement :$2-" requires="BotServ"  service="yes">
+<alias text="CHANSERV" replace="SQUERY $requirement :$2-" requires="ChanServ" service="yes">
+<alias text="GLOBAL"   replace="SQUERY $requirement :$2-" requires="Global"   service="yes" operonly="yes">
+<alias text="HOSTSERV" replace="SQUERY $requirement :$2-" requires="HostServ" service="yes">
+<alias text="MEMOSERV" replace="SQUERY $requirement :$2-" requires="MemoServ" service="yes">
+<alias text="NICKSERV" replace="SQUERY $requirement :$2-" requires="NickServ" service="yes">
+<alias text="OPERSERV" replace="SQUERY $requirement :$2-" requires="OperServ" service="yes" operonly="yes">
+<alias text="STATSERV" replace="SQUERY $requirement :$2-" requires="StatServ" service="yes">
+<alias text="BS" replace="SQUERY $requirement :$2-" requires="BotServ"  service="yes">
+<alias text="CS" replace="SQUERY $requirement :$2-" requires="ChanServ" service="yes">
+<alias text="GL" replace="SQUERY $requirement :$2-" requires="Global"   service="yes" operonly="yes">
+<alias text="HS" replace="SQUERY $requirement :$2-" requires="HostServ" service="yes">
+<alias text="MS" replace="SQUERY $requirement :$2-" requires="MemoServ" service="yes">
+<alias text="NS" replace="SQUERY $requirement :$2-" requires="NickServ" service="yes">
+<alias text="OS" replace="SQUERY $requirement :$2-" requires="OperServ" service="yes" operonly="yes">
+<alias text="SS" replace="SQUERY $requirement :$2-" requires="StatServ" service="yes">
+<alias text="ID"       format="*" replace="SQUERY $requirement :IDENTIFY $2-" requires="NickServ" service="yes">
+<alias text="IDENTIFY" format="*" replace="SQUERY $requirement :IDENTIFY $2-" requires="NickServ" service="yes">
+<alias text="LOGIN"    format="*" replace="SQUERY $requirement :IDENTIFY $2-" requires="NickServ" service="yes">
+<alias text="LOGOUT" format="*" replace="SQUERY $requirement :LOGOUT" requires="NickServ" service="yes">
+<badnick nick="BotServ"  reason="Reserved for a network service">
+<badnick nick="ChanServ" reason="Reserved for a network service">
+<badnick nick="Global"   reason="Reserved for a network service">
+<badnick nick="HostServ" reason="Reserved for a network service">
+<badnick nick="MemoServ" reason="Reserved for a network service">
+<badnick nick="NickServ" reason="Reserved for a network service">
+<badnick nick="OperServ" reason="Reserved for a network service">
+<badnick nick="StatServ" reason="Reserved for a network service">
+<exemptfromfilter target="BotServ">
+<exemptfromfilter target="ChanServ">
+<exemptfromfilter target="Global">
+<exemptfromfilter target="HostServ">
+<exemptfromfilter target="MemoServ">
+<exemptfromfilter target="NickServ">
+<exemptfromfilter target="OperServ">
+<exemptfromfilter target="StatServ">
 
