--- a/ARKFUTURE/CONF/anope/anope.conf
+++ b/ARKFUTURE/CONF/anope/anope.conf
@@ -211,7 +211,7 @@ serverinfo
 	 * 请注意,它不必是现有的主机名,只需是一个不在您网络上的主机名即可。
 	 * 
 	 */
-	name = ""
+	name = "0.0.0.0"
 
 	/*
 	 * 应作为服务器信息显示在/WHOIS和类似查询中的文本。
@@ -992,7 +992,7 @@ mail
 				---
 
 				您已请求在 %n 上注册昵称 %n
-				请键入 " /msg NickServ CONFIRM %c \" 以完成注册
+				请键入 \" /msg NickServ CONFIRM %c \" 以完成注册
 
 				如果你不知道为什么这封邮件被发送给你 请默默地忽略它
 
@@ -1019,7 +1019,7 @@ mail
 			---
 			
 			您已请求重置 %n 的密码
-			要重置密码，请键入 " /msg NickServ CONFIRM %n %c \"
+			要重置密码，请键入 \" /msg NickServ CONFIRM %n %c \"
 
 			如果你不知道为什么这封邮件被发送给你，请默默地忽略它 
 
@@ -1048,7 +1048,7 @@ mail
 			---
 			
 			您已请求将您的电子邮件地址从 %e 更改为 %E
-			请键入 " /msg NickServ CONFIRM %c \" 以确认此更改
+			请键入 \" /msg NickServ CONFIRM %c \" 以确认此更改
 
 			如果你不知道为什么这封邮件被发送给你，请默默地忽略它
 
@@ -1363,27 +1363,4 @@ include
 {
 	type = "file"
 	name = "modules.conf"
-}
-
-/*
- * Chanstats 模块.
- * 需要 MySQL 数据库.
- */
-#include
-{
-	type = "file"
-	name = "chanstats.conf"
-}
-
-/*
- * IRC2SQL 网关
- * 此模块收集有关用户、渠道和服务器的数据
- * 它本身并不构建统计数据，但是，它为您提供了数据库，这取决于您如何使用它
- *
- * 需要MySQL数据库和MySQL 5.5或更高版本
- */
-#include
-{
-	type = "file"
-	name = "irc2sql.conf"
 }
