--- a/ARKFUTURE/CONF/anope/anope.conf
+++ b/ARKFUTURE/CONF/anope/anope.conf
@@ -1364,3 +1364,26 @@ include
 	type = "file"
 	name = "modules.conf"
 }
+
+/*
+ * Chanstats 模块.
+ * 需要 MySQL 数据库.
+ */
+#include
+{
+	type = "file"
+	name = "chanstats.conf"
+}
+
+/*
+ * IRC2SQL 网关
+ * 此模块收集有关用户、渠道和服务器的数据
+ * 它本身并不构建统计数据，但是，它为您提供了数据库，这取决于您如何使用它
+ *
+ * 需要MySQL数据库和MySQL 5.5或更高版本
+ */
+#include
+{
+	type = "file"
+	name = "irc2sql.conf"
+}
