--- a/ARKFUTURE/CONF/anope/anope.conf
+++ b/ARKFUTURE/CONF/anope/anope.conf
@@ -379,7 +379,7 @@ options
 
 	/*
 	 * 设置服务删除用户之前尝试无效密码的次数(密码输出次数限制)
-	 * 此指令是可选的，但建议使用
+	 * 此指令是可选的 但建议使用
 	 * 
 	 * 
 	 * 
@@ -655,7 +655,7 @@ log
 	 * 保留日志文件的天数, 仅在登录到文件时有用.
 	 * 设置为0表示从不删除旧日志文件.
 	 *
-	 * 请注意，anope必须每天24小时运行，此功能才能正常工作.
+	 * 请注意 anope必须每天24小时运行 此功能才能正常工作.
 	 */
 	logage = 1
 
@@ -691,7 +691,7 @@ log
 	 *
 	 * Rawio 和 debug 是简单的 yes/no 答案, 没有类型.
 	 *
-	 * 请注意，模块可能会将自己的值添加到这些选项中
+	 * 请注意 模块可能会将自己的值添加到这些选项中
 	 */
 	admin = "*"
 	override = "chanserv/* nickserv/* memoserv/set ~botserv/set botserv/*"
@@ -726,8 +726,8 @@ log
  * 建议使用此块 因为没有它 您将无法访问大多数opera命令.
  *
  * 下面的命令名是默认值 在 *serv.conf 配置
- * 如果您配置了具有权限的其他命令，例如来自第三方模块的命令
- * 在使用命令之前，权限必须包含在opertype块中.
+ * 如果您配置了具有权限的其他命令 例如来自第三方模块的命令
+ * 在使用命令之前 权限必须包含在opertype块中.
  *
  * 可用权限:
  *  botserv/administration        - Can view and assign private BotServ bots
@@ -867,12 +867,12 @@ oper
 	/* 此人将具有的操作类型 */
 	type = "Services Root"
 
-	/* 如果设置，用户必须是IRCD上的操作者才能获得其操作者权限
+	/* 如果设置 用户必须是IRCD上的操作者才能获得其操作者权限
 	 * 
 	 */
 	require_oper = yes
 
-	/* 可选密码。如果已定义，用户必须首先使用 "/OPERSERV LOGIN" 登录 */
+	/* 可选密码。如果已定义 用户必须首先使用 "/OPERSERV LOGIN" 登录 */
 	password = "123456"
 
 	/* 可选的SSL指纹 如果已定义 则需要能够使用此操作类型 */
@@ -1019,14 +1019,14 @@ mail
 			---
 			
 			您已请求重置 %n 的密码
-			要重置密码，请键入 \" /msg NickServ CONFIRM %n %c \"
+			要重置密码 请键入 \" /msg NickServ CONFIRM %n %c \"
 
-			如果你不知道为什么这封邮件被发送给你，请默默地忽略它 
+			如果你不知道为什么这封邮件被发送给你 请默默地忽略它 
 
 			%N 管理员 "
 
 	/*
-	 * 当用户请求新的电子邮件地址时，发送给他们的电子邮件的主题和消息。
+	 * 当用户请求新的电子邮件地址时 发送给他们的电子邮件的主题和消息。
 	 *
 	 * 模板为:
 	 *  %e - 获取 old email address
@@ -1050,12 +1050,12 @@ mail
 			您已请求将您的电子邮件地址从 %e 更改为 %E
 			请键入 \" /msg NickServ CONFIRM %c \" 以确认此更改
 
-			如果你不知道为什么这封邮件被发送给你，请默默地忽略它
+			如果你不知道为什么这封邮件被发送给你 请默默地忽略它
 
 			%N管理员 "
 
 	/*
-	 * 当用户收到新备忘录时，发送给他们的电子邮件的主题和信息.
+	 * 当用户收到新备忘录时 发送给他们的电子邮件的主题和信息.
 	 *
 	 * Available tokens for this template are:
 	 *  %n - 获取 nickname
@@ -1165,7 +1165,7 @@ module
 	#nobackupokay = yes
 
 	/*
-	 * 如果启用，服务将分叉子进程以保存数据库
+	 * 如果启用 服务将分叉子进程以保存数据库
 	 * 这只适用于非常大的数据库
 	 * 
 	 * 
@@ -1378,7 +1378,7 @@ include
 /*
  * IRC2SQL 网关
  * 此模块收集有关用户、渠道和服务器的数据
- * 它本身并不构建统计数据，但是，它为您提供了数据库，这取决于您如何使用它
+ * 它本身并不构建统计数据 但是 它为您提供了数据库 这取决于您如何使用它
  *
  * 需要MySQL数据库和MySQL 5.5或更高版本
  */
