--- a/ARKFUTURE/CONF/anope/anope.conf
+++ b/ARKFUTURE/CONF/anope/anope.conf
@@ -90,7 +90,7 @@
 define
 {
 	name = "stats.host"
-	value = "0.0.0.0"
+	value = ""
 }
 
 /*
@@ -167,7 +167,7 @@ uplink
 	 *
 	 * 注: 在某些shell提供程序上, 这不是一种选择.
 	 */
-	host = "0.0.0.0"
+	host = "127.0.0.1"
 
 	/*
 	 * Anope 连接到上行链路时应使用的协议. 
@@ -211,7 +211,7 @@ serverinfo
 	 * 请注意,它不必是现有的主机名,只需是一个不在您网络上的主机名即可。
 	 * 
 	 */
-	name = "0.0.0.0"
+	name = "127.0.0.1"
 
 	/*
 	 * 应作为服务器信息显示在/WHOIS和类似查询中的文本。
@@ -1359,7 +1359,7 @@ module
 #module { name = "enc_sha256" }
 
 /* 额外可选的模块 */
-include
+#include
 {
 	type = "file"
 	name = "modules.conf"
