--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -648,7 +648,7 @@
       recvpass="123456">
 <services server="127.0.0.1" 
           silent="yes">
-<bind address="" 
+<bind address="127.0.0.1" 
       port="7000" 
       type="servers"
       free="yes">
