--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -46,8 +46,7 @@
 #监听器,监听客户端;若使用TLS/SSL,请在.ssl.conf中修改相关配置
 <bind address=""
       port="6667,6668,6669"
-      type="clients"
-      free="yes">
+      type="clients">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -651,6 +650,5 @@
           silent="yes">
 <bind address="127.0.0.1" 
       port="7000" 
-      type="servers"
-      free="yes">
+      type="servers">
 
