--- a/ARKFUTURE/CONF/anope/anope.conf
+++ b/ARKFUTURE/CONF/anope/anope.conf
@@ -87,7 +87,7 @@
 /*
  * stats.host 定义在整个配置中用于stats客户端主机名的多个不同位置
  */
-#define
+define
 {
 	name = "stats.host"
 	value = ""
@@ -113,9 +113,8 @@
 	name = "/usr/bin/wget -q -O - https://some.misconfigured.network.com/stats.conf"
 }
 
-
 /*
- * [REQUIRED] IRCd Config #1
+ * [REQUIRED] IRCd Config
  *
  * 本节用于设置anope以连接到您的IRC网络.
  * 此部分可以多次包含, anope将尝试连接到每台服务器,直到它最终连接.
@@ -156,6 +155,9 @@
  *     };
  *     ulines { stats.example.com; };
  */
+
+
+
 uplink
 {
 	/*
@@ -197,9 +199,8 @@ uplink
 	password = "123456"
 }
 
-
 /*
- * [REQUIRED] Server Information #2
+ * [REQUIRED] Server Information
  *
  * 本节包含有关服务服务器的信息
  */
@@ -248,9 +249,8 @@ serverinfo
 	motd = "motd.txt"
 }
 
-
 /*
- * [REQUIRED] Protocol module #3
+ * [REQUIRED] Protocol module
  *
  * 此指令告诉Anope连接时要使用哪种IRCd协议
  * 你需要修改这个来匹配你的IRCD
@@ -267,9 +267,8 @@ serverinfo
  */
 module{	name = "inspircd" }
 
-
 /*
- * [REQUIRED] Network Information #4
+ * [REQUIRED] Network Information
  * 
  * 本节包含有关Anope将连接到的IRC网络的信息。
  * 
@@ -350,9 +349,8 @@ networkinfo
 	disallow_start_or_end = ".-"
 }
 
-
 /*
- * [REQUIRED] Anope Options #5
+ * [REQUIRED] Anope Options
  *
  * 本节包含各种选项 这些选项决定了anope的操作方式
  */
@@ -480,7 +478,7 @@ options
 	/*
 	 * 上行链路连接重试之间需要等待多长时间(s).
 	 */
-	retrywait = s
+	retrywait = 60s
 
 	/*
 	 * 如果设置 服务将从HELP输出中隐藏用户没有权限执行的命令
@@ -523,9 +521,99 @@ options
 	#defaultlanguage = "es_ES.UTF-8"
 }
 
+/*
+ * [OPTIONAL] BotServ
+ *
+ * 导入 botserv.conf, 这是 BotServ 需要的.
+ *
+ * 删除此块以禁用 BotServ.
+ */
+include
+{
+	type = "file"
+	name = "botserv.conf"
+}
 
 /*
- * [RECOMMENDED] Logging Configuration #6
+ * [RECOMMENDED] ChanServ
+ *
+ * 导入 chanserv.conf, 这是 ChanServ 需要的.
+ *
+ * 删除此块以禁用 ChanServ.
+ */
+include
+{
+	type = "file"
+	name = "chanserv.conf"
+}
+
+/*
+ * [RECOMMENDED] Global
+ *
+ * 导入 global.conf, 这是 Global 需要的.
+ *
+ * 删除此块以禁用 Global.
+ */
+include
+{
+	type = "file"
+	name = "global.conf"
+}
+
+/*
+ * [OPTIONAL] HostServ
+ *
+ * 导入 hostserv.conf,这是 HostServ 需要的.
+ *
+ * Remove this block to disable HostServ.
+ */
+include
+{
+	type = "file"
+	name = "hostserv.conf"
+}
+
+/*
+ * [OPTIONAL] MemoServ
+ *
+ * 导入 memoserv.conf, 这是 MemoServ 需要的.
+ *
+ * 删除此块以禁用 MemoServ.
+ */
+include
+{
+	type = "file"
+	name = "memoserv.conf"
+}
+
+/*
+ * [OPTIONAL] NickServ
+ *
+ * 导入 nickserv.conf, 这是 NickServ 需要的.
+ *
+ * 删除此块以禁用 NickServ.
+ */
+include
+{
+	type = "file"
+	name = "nickserv.conf"
+}
+
+/*
+ * [RECOMMENDED] OperServ
+ *
+ * 导入 operserv.conf, 这是 OperServ 需要的.
+ *
+ * 删除此块以禁用 OperServ.
+ */
+include
+{
+	type = "file"
+	name = "operserv.conf"
+}
+
+/*
+ * [RECOMMENDED] Logging Configuration
  *
  * 本节用于配置日志及其记录位置.
  * 如果你愿意 你可以有多个日志块. 
@@ -629,9 +717,8 @@ log
 	other = "expire/* bados akill/*"
 }
 
-
 /*
- * [RECOMMENDED] Oper Access Config #7
+ * [RECOMMENDED] Oper Access Config
  *
  * 本节用于设置员工对受限操作命令的访问权限.
  * 您可以定义命令和权限组 以及谁可以使用它们.
@@ -800,9 +887,20 @@ oper
 	vhost = "ARKFUTURE"
 }
 
+#oper
+{
+	name = "nick2"
+	type = "Services Administrator"
+}
+
+#oper
+{
+	name = "nick3"
+	type = "Helper"
+}
 
 /*
- * [OPTIONAL] Mail Config #8
+ * [OPTIONAL] Mail Config
  *
  * 邮件配置
  * 如果usemail指令设置为yes 
@@ -984,9 +1082,8 @@ mail
 			%t"
 }
 
-
 /*
- * [REQUIRED] Database configuration. #9
+ * [REQUIRED] Database configuration.
  *
  * 本节用于配置Anope使用的数据库
  * 您应该至少加载一个数据库方法 否则您拥有的任何数据都不会被存储
@@ -1091,7 +1188,7 @@ module
  * 
  *
  */
-module
+#module
 {
 	name = "db_sql"
 	#name = "db_sql_live"
@@ -1106,7 +1203,7 @@ module
 	 * 在每个创建的表的名称前添加一个可选前缀.
 	 * 
 	 */
-	prefix = "anope_db_"
+	#prefix = "anope_db_"
 
 	/* 启动时是否将其他数据库模块中的数据导入
 	 * 
@@ -1121,34 +1218,172 @@ module
 	import = false
 }
 
-
 /*
- * [OPTIONAL] Other. #10
+ * db_redis
  *
- * 本节用于配置Anope的其他部件 使用incloud导入 
+ * 
+ * 
+ *
+ * 
+ * 
  * 
  * 
  */
-include
+#module
+{
+	name = "db_redis"
+
+	/*
+	 * 使用Redis数据库 这必须使用redis进行配置
+	 */
+	engine = "redis/main"
+}
+
+/*
+ * [RECOMMENDED] Encryption modules.
+ *
+ * 加密模块的使用
+ * 
+ *
+ * 
+ * 
+ * 
+ * 
+ */
+
+/*
+ * enc_sha2
+ * 
+ * 
+ * 
+ * 
+ */
+module
+{
+	name = "enc_sha2"
+
+	/** The sub-algorithm to use. Can be set to sha224 for SHA-224, sha256 for
+	 * SHA-256, sha284 for SHA-384 or sha512 to SHA-512. Defaults to sha256.
+	 */
+	#algorithm = "sha256"
+}
+
+/*
+ * [EXTRA] enc_argon2
+ *
+ * Provides support for encrypting passwords using the Argon2 algorithm. See
+ * https://en.wikipedia.org/wiki/Argon2 for more information.
+ */
+#module
+{
+	name = "enc_argon2"
+
+	/** The sub-algorithm to use. Can be set to argon2d for Argon2d, argon2i for
+	 * Argon2i, or argon2id for Argon2id. Defaults to argon2id.
+	 */
+	#algorithm = "argon2id"
+
+	/** The memory hardness in kibibytes of the Argon2 algorithm. Defaults to
+	 * 128 mebibytes.
+	 */
+	#memory_cost = 121072
+
+	/** The time hardness (iterations) of the Argon2 algorithm. Defaults to 3.
+	 */
+	#time_cost = 3
+
+	/** The amount of parallel threads to use when encrypting passwords.
+	 * Defaults to 1.
+	 */
+	#parallelism = 1
+
+	/** The length in bytes of an Argon2 hash. Defaults to 32. */
+	#hash_length = 32
+
+	/** The length in bytes of an Argon2 salt. Defaults to 32. */
+	#salt_length = 32
+}
+
+/*
+ * enc_bcrypt
+ *
+ * Provides support for encrypting passwords using the Bcrypt algorithm. See
+ * https://en.wikipedia.org/wiki/Bcrypt for more information.
+ */
+#module
+{
+	name = "enc_bcrypt"
+
+	/** The number of Bcrypt rounds to perform on passwords. Can be set to any
+	 * number between 10 and 32 but higher numbers are more CPU intensive and
+	 * may impact performance.
+	 */
+	#rounds = 10
+}
+
+/*
+ * [EXTRA] enc_posix
+ *
+ * Provides verify-only support for passwords encrypted using the POSIX crypt()
+ * function. Load this if you are migrating from another services packages such
+ * as Atheme. See https://en.wikipedia.org/wiki/Crypt_(C) for more information.
+ *
+ * You must load another encryption method before this to re-encrypt passwords
+ * with when a user logs in.
+ */
+#module { name = "enc_posix" }
+
+/*
+ * [DEPRECATED] enc_md5, enc_none, enc_old, enc_sha1, enc_sha256
+ *
+ * Provides verify-only support for passwords encrypted using encryption methods
+ * from older versions of Anope. These methods are no longer considered secure
+ * and will be removed in a future version of Anope. Only load them if you are
+ * upgrading from a previous version of Anope that used them.
+ *
+ * enc_md5:    Verifies passwords encrypted with the MD5 algorithm
+ * enc_none:   Verifies passwords that are not encrypted
+ * enc_sha1:   Verifies passwords encrypted with the SHA1 algorithm
+ * enc_old:    Verifies passwords encrypted with the broken MD5 algorithm used
+ *             before 1.7.17.
+ * enc_sha256: Verifies passwords encrypted with the SHA256 algorithm using a
+ *             custom initialisation vector as a salt.
+ *
+ * You must load another encryption method before this to re-encrypt passwords
+ * with when a user logs in.
+ */
+#module { name = "enc_md5" }
+#module { name = "enc_none" }
+#module { name = "enc_old" }
+#module { name = "enc_sha1" }
+#module { name = "enc_sha256" }
+
+/* 额外可选的模块 */
+#include
 {
 	type = "file"
 	name = "modules.conf"
 }
 
-include
+/*
+ * Chanstats 模块.
+ * 需要 MySQL 数据库.
+ */
+#include
+{
+	type = "file"
+	name = "chanstats.conf"
+}
+
+/*
+ * IRC2SQL 网关
+ * 此模块收集有关用户、渠道和服务器的数据
+ * 它本身并不构建统计数据 但是 它为您提供了数据库 这取决于您如何使用它
+ *
+ * 需要MySQL数据库和MySQL 5.5或更高版本
+ */
+#include
 {
 	type = "file"
 	name = "irc2sql.conf"
-}
-
-include
-{
-	type = "file"
-	name = "botserv.conf"
-}
-
-include
-{
-	type = "file"
-	name = "operserv.conf"
 }
