--- a/ARKFUTURE/CONF/anope/anope.conf
+++ b/ARKFUTURE/CONF/anope/anope.conf
@@ -541,7 +541,7 @@ include
  *
  * 删除此块以禁用 ChanServ.
  */
-include
+#include
 {
 	type = "file"
 	name = "chanserv.conf"
@@ -554,7 +554,7 @@ include
  *
  * 删除此块以禁用 Global.
  */
-include
+#include
 {
 	type = "file"
 	name = "global.conf"
@@ -567,7 +567,7 @@ include
  *
  * Remove this block to disable HostServ.
  */
-include
+#include
 {
 	type = "file"
 	name = "hostserv.conf"
@@ -580,7 +580,7 @@ include
  *
  * 删除此块以禁用 MemoServ.
  */
-include
+#include
 {
 	type = "file"
 	name = "memoserv.conf"
@@ -593,7 +593,7 @@ include
  *
  * 删除此块以禁用 NickServ.
  */
-include
+#include
 {
 	type = "file"
 	name = "nickserv.conf"
