--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -22,6 +22,8 @@
         value="&dir.config;/conf">
 <define name="TxtPath"
         value="&dir.config;/txt">
+<define name="LocalHost"
+        value="127.0.0.1">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -641,14 +643,14 @@
 
 #-#-#-#-#-#-#-#-#-#IRC Services(IRC 服务)-#-#-#-#-#-#-#-#
 <link allowmask="*"
-      name="127.0.0.1"
-      ipaddr="127.0.0.1"
+      name="&LocalHost;"
+      ipaddr="&LocalHost;"
       port="7000"
       sendpass="123456"
       recvpass="123456">
-<services server="127.0.0.1" 
+<services server="&LocalHost;" 
           silent="yes">
-<bind address="127.0.0.1" 
+<bind address="&LocalHost;" 
       port="7000" 
       type="servers">
 
