feat(inspircd): Update comment for <define> tag in inspircd.conf

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -17,7 +17,7 @@
       logdir="&dir.log;"
       moduledir="&dir.module;"
       runtimedir="&dir.runtime;">
-# <define> 标记允许您定义 XML 样式的实体(定义服务器变量)
+# <define> 标记允许您定义一个实体(定义服务器变量)
 <define name="ConfPath"
         value="&dir.config;/conf">
 <define name="TxtPath"
