--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -40,7 +40,7 @@
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
 <admin name="arkfuture"
        description="ARKFUTURE-IRC/WG|Nick:arkfuture"
-       email="">
+       email="2qwn2rrds@mozmail.com">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
