feat(inspircd): Update config files and remove unused options

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -1,4 +1,4 @@
-#inspircd -- UTF-8 --INSPIRCD v4
+#inspircd -- UTF-8 --INSPIRCD 
 # 这只是一个或多或少可以使用的配置文件示例 
 # 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
@@ -7,8 +7,8 @@
 #
 # 您可以在以下文档中查询详细配置来完善此配置
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
-# 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration
-# 进行详细配置
+# 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration 进行详细配置
+# CFv24-07-22 TXv07-22-20-48 SEv4.1.0 
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -627,8 +627,6 @@
 
 ######TLS/SSL模块
 #<include file="&ConfPath;/ssl.conf">
-######SQL模块
-#<include file="&ConfPath;/sql.conf">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#LOG(日志)#-#-#-#-#-#-#-#-#-#-#-#
