--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -22,6 +22,8 @@
         value="&dir.config;/conf">
 <define name="TxtPath"
         value="&dir.config;/txt">
+<define name="SSLPath"
+        value="&dir.config;/ssl">
 <define name="LocalHost"
         value="127.0.0.1">
 
@@ -626,7 +628,7 @@
          maxbackoff="5m">
 
 ######TLS/SSL模块
-#<include file="&ConfPath;/ssl.conf">
+#<include file="&SSLPath;/ssl.conf">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#LOG(日志)#-#-#-#-#-#-#-#-#-#-#-#
