feat(inspircd): Update comment for <define> tag in inspircd.conf

--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -8,7 +8,7 @@
 # 您可以在以下文档中查询详细配置来完善此配置
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
 # 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration 进行详细配置
-# CFv24-07-22 TXv07-22-20-48 SEv4.1.0 
+# CFv240722 TXv07231055 SEv4.1.0 
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
