--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -8,7 +8,7 @@
 # 您可以在以下文档中查询详细配置来完善此配置
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
 # 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration 进行详细配置
-# CFv240722 TXv07231055 SEv4.1.0 
+# CFv2407231126 TXv07231055 SEv4.1.0 
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -128,9 +128,7 @@
 <files motd="&TxtPath;/motd.txt"
        opermotd="&TxtPath;/opermotd.txt"
        quotes="&TxtPath;/quotes.txt"
-       rules="&TxtPath;/rules.txt"
-       permchannels="&ConfPath;/permchannels.conf"
-       xline="&ConfPath;/xline.db">
+       rules="&TxtPath;/rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
@@ -571,7 +569,7 @@
 <mkpasswd operonly="no">
 <pbkdf2 iterations="12288"
         length="32">
-<permchanneldb filename="permchannels"
+<permchanneldb filename="&ConfPath;/permchannels.conf"
                listmodes="yes"
                operonly="yes"
                saveperiod="5s"
@@ -622,7 +620,7 @@
 <starttls provider="">
 <timedbans sendnotice="yes">
 <watch maxwatch="32">
-<xlinedb filename="xline"
+<xlinedb filename="&ConfPath;/xline.db"
          saveperiod="5s"
          backoff="2"
          maxbackoff="5m">
